--- a/templates/index.html
+++ b/templates/index.html
@@ -10,47 +10,48 @@
     <title>{{ .PageTitle }}</title>
 </head>
 
-<body class="bg-gray-100">
-    <nav class="bg-blue-600 p-4 shadow-md">
-        <ul class="flex space-x-6 container mx-auto">
-            {{ range .Navigation }}
-            <li><a href="{{ .Url }}" class="text-white hover:text-blue-200 font-semibold transition">{{ .Name }}</a>
-            </li>
-            {{ end }}
-        </ul>
-    </nav>
-    <div class="container mx-auto mt-8 p-4">
-        <div class="w-full max-w-lg mx-auto">
-            <h1 class="text-3xl font-bold mb-6 text-center">Create New Post</h1>
-            <form hx-post="/api/admin/post" hx-target="#result" hx-swap="innerHTML"
-                class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
-                <div class="mb-4">
-                    <label class="block text-gray-700 text-sm font-bold mb-2" for="title">Title</label>
-                    <input
-                        class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-                        id="title" name="title" type="text" placeholder="Post Title" required>
+<body class="bg-[#ececec]">
+    <div class="max-w-[1000px] mx-auto">
+        {{ template "navi_bar" . }}
+        <div class="container mx-auto mt-8 p-4">
+            <div class="flex flex-col space-y-6">
+                {{ range .Posts }}
+                <!-- Card -->
+                <div
+                    class="bg-white rounded-2xl shadow-standard transition overflow-hidden cursor-pointer w-full max-w-xl mx-auto">
+                    <!-- Image Section -->
+                    {{ if .CustomVars.cover }}
+                    <div class="h-64 w-full">
+                        <img src="{{ .CustomVars.cover }}" alt="{{ .Title }}"
+                            class="rounded-2xl w-full h-full object-cover transition duration-300">
+                    </div>
+                    {{ end }}
+
+                    <!-- Info Section -->
+                    <div class="p-4">
+                        <div class="flex items-center gap-3 mb-2">
+                            <span
+                                class="px-2.5 py-0.5 text-xs font-semibold text-gray-600 rounded-md uppercase tracking-wide"
+                                style="background-color: {{ .Category.Color }};">{{
+                                .Category.Name }}</span>
+                            <h2 class="text-2xl font-bold text-gray-800 line-clamp-1 transition">
+                                {{ .Title }}</h2>
+                        </div>
+
+                        <!-- intro -->
+                        {{ if .CustomVars.intro }}
+                        <div class="mb-2">
+                            <p class="text-gray-600 line-clamp-3">{{ .CustomVars.intro }}</p>
+                        </div>
+                        {{ end }}
+
+                        <div class="flex justify-end items-end mt-4">
+                            <span class="text-sm text-gray-500 font-mono">{{ .CreatedAt.Format "2006-01-02" }}</span>
+                        </div>
+                    </div>
                 </div>
-                <div class="mb-4">
-                    <label class="block text-gray-700 text-sm font-bold mb-2" for="category">Category</label>
-                    <input
-                        class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-                        id="category" name="category" type="text" placeholder="Category">
-                </div>
-                <div class="mb-6">
-                    <label class="block text-gray-700 text-sm font-bold mb-2" for="content">Content</label>
-                    <textarea
-                        class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline h-32"
-                        id="content" name="content" placeholder="Post Content (Markdown)" required></textarea>
-                </div>
-                <div class="flex items-center justify-between">
-                    <button
-                        class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
-                        type="submit">
-                        Create Post
-                    </button>
-                </div>
-            </form>
-            <div id="result" class="text-center mt-4"></div>
+                {{ end }}
+            </div>
         </div>
     </div>
 </body>
