--- a/templates/navi_bar.html
+++ b/templates/navi_bar.html
@@ -7,7 +7,7 @@
     <ul class="flex space-x-6 items-center">
         {{ range .Navigation }}
         <li>
-            <a href="{{ .Url }}" class="px-4 py-2 rounded-lg font-medium text-gray-800 transition hover:bg-white/70">
+            <a href="{{ .Route }}" class="px-4 py-2 rounded-lg font-medium text-gray-800 transition hover:bg-white/70">
                 {{ .Name }}
             </a>
         </li>
