--- a/templates/navi_bar.html
+++ b/templates/navi_bar.html
@@ -1,9 +1,11 @@
 {{ define "navi_bar" }}
 
 <nav class="h-[100px] flex items-center justify-between container mx-auto">
-    <div class="text-xl font-bold bg-[#0099cc] text-white px-4 py-2 rounded-xl shadow-sm">
-        HIM's Blog
-    </div>
+    <a href="/">
+        <div class="text-xl font-bold bg-[#0099cc] text-white px-4 py-2 rounded-xl shadow-sm">
+            HIM's Blog
+        </div>
+    </a>
     <ul class="flex space-x-6 items-center">
         {{ range .Navigation }}
         <li>
