--- a/templates/post.html
+++ b/templates/post.html
@@ -42,9 +42,7 @@
                         </div>
                     </div>
 
-                    <div class="p-4">
-                        {{ .Content }}
-                    </div>
+                    <div class="p-4 whitespace-pre-wrap">{{ .Content }}</div>
                 </div>
                 {{ end }}
             </div>
