--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,14 +1,5 @@
 {{ define "admin" }}
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/assets/style.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/htmx.org@2.0.8/dist/htmx.min.js"></script>
-    <title>Manage</title>
-</head>
+{{ template "header" . }}
 
 <body class="bg-gray-100">
     <div class="container mx-auto mt-8 p-4">
