--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,5 @@
 {{ define "index" }}
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/assets/style.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/htmx.org@2.0.8/dist/htmx.min.js"></script>
-    <title>{{ .PageTitle }}</title>
-</head>
+{{ template "header" . }}
 
 <body class="bg-[#ececec]">
     <div class="max-w-[1000px] mx-auto">
