--- a/templates/components/navi_bar.html
+++ b/templates/components/navi_bar.html
@@ -1,6 +1,6 @@
 {{ define "navi_bar" }}
 
-<nav class="h-[100px] flex items-center justify-between container mx-auto">
+<nav class="h-[100px] flex items-center justify-between mx-auto max-w-xl px-8">
     <a href="/">
         <div class="text-xl font-bold bg-[#0099cc] text-white px-4 py-2 rounded-xl shadow-sm">
             HIM's Blog
