--- a/templates/components/admin/create_page.html
+++ b/templates/components/admin/create_page.html
@@ -15,6 +15,12 @@
             class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
             id="page-route" name="route" type="text" placeholder="Route (e.g. /about)" required>
     </div>
+    <div class="mb-6">
+        <label class="block text-gray-700 text-sm font-bold mb-2" for="page-template">Template</label>
+        <input
+            class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+            id="page-template" name="template" type="text" placeholder="Template (e.g. about)" required>
+    </div>
     <div class="flex items-center justify-between">
         <button
             class="bg-green-600 hover:bg-green-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
