--- a/templates/index.html
+++ b/templates/index.html
@@ -4,43 +4,41 @@
 <body class="bg-[#ececec]">
     <div class="max-w-[1000px] mx-auto">
         {{ template "navi_bar" . }}
-        <div class="container mx-auto mt-8 p-4">
+        <div class="mx-auto max-w-xl">
             <div class="flex flex-col space-y-6">
                 {{ range .Posts }}
                 <!-- Card -->
-                <a href="/p/{{ .ID }}">
-                    <div
-                        class="bg-white rounded-2xl shadow-standard transition overflow-hidden cursor-pointer w-full max-w-xl mx-auto">
-                        <!-- Image Section -->
-                        {{ if .CustomVars.cover }}
-                        <div class="h-64 w-full">
-                            <img src="{{ .CustomVars.cover }}" alt="{{ .Title }}"
-                                class="rounded-2xl w-full h-full object-cover transition duration-300">
+                <a href="/p/{{ .ID }}"
+                    class="bg-white rounded-2xl shadow-standard transition overflow-hidden cursor-pointer w-full max-w-xl mx-auto">
+                    <!-- Image Section -->
+                    {{ if .CustomVars.cover }}
+                    <div class="h-64 w-full">
+                        <img src="{{ .CustomVars.cover }}" alt="{{ .Title }}"
+                            class="rounded-2xl w-full h-full object-cover transition duration-300">
+                    </div>
+                    {{ end }}
+
+                    <!-- Info Section -->
+                    <div class="p-4">
+                        <div class="flex items-center gap-3 mb-2">
+                            <span
+                                class="px-2.5 py-0.5 text-xs font-semibold text-gray-600 rounded-md uppercase tracking-wide"
+                                style="background-color: {{ .Category.Color }};">{{
+                                .Category.Name }}</span>
+                            <h2 class="text-2xl font-bold text-gray-800 line-clamp-1 transition">
+                                {{ .Title }}</h2>
+                        </div>
+
+                        <!-- intro -->
+                        {{ if .CustomVars.intro }}
+                        <div class="mb-2">
+                            <p class="text-gray-600 line-clamp-3">{{ .CustomVars.intro }}</p>
                         </div>
                         {{ end }}
 
-                        <!-- Info Section -->
-                        <div class="p-4">
-                            <div class="flex items-center gap-3 mb-2">
-                                <span
-                                    class="px-2.5 py-0.5 text-xs font-semibold text-gray-600 rounded-md uppercase tracking-wide"
-                                    style="background-color: {{ .Category.Color }};">{{
-                                    .Category.Name }}</span>
-                                <h2 class="text-2xl font-bold text-gray-800 line-clamp-1 transition">
-                                    {{ .Title }}</h2>
-                            </div>
-
-                            <!-- intro -->
-                            {{ if .CustomVars.intro }}
-                            <div class="mb-2">
-                                <p class="text-gray-600 line-clamp-3">{{ .CustomVars.intro }}</p>
-                            </div>
-                            {{ end }}
-
-                            <div class="flex justify-end items-end mt-4">
-                                <span class="text-sm text-gray-500 font-mono">{{ .CreatedAt.Format "2006-01-02"
-                                    }}</span>
-                            </div>
+                        <div class="flex justify-end items-end mt-4">
+                            <span class="text-sm text-gray-500 font-mono">{{ .CreatedAt.Format "2006-01-02"
+                                }}</span>
                         </div>
                     </div>
                 </a>
