--- a/templates/admin.html
+++ b/templates/admin.html
@@ -19,7 +19,7 @@
 
             {{ template "manage_post_list" . }}
 
-            {{ template "attach_uploader" . }}
+            {{/* template "attach_uploader" . */}}
 
         </div>
     </div>
