--- a/templates/components/admin/attach_uploader.html
+++ b/templates/components/admin/attach_uploader.html
@@ -1,8 +1,8 @@
 {{ define "attach_uploader"}}
 <div class="w-full max-w-lg mx-auto">
     <h1 class="text-3xl font-bold mb-6 text-center">Upload Attachment</h1>
-    <form hx-post="/api/admin/attach" hx-encoding="multipart/form-data" hx-target="#attach-result" hx-swap="innerHTML"
-        class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
+    <form hx-post="/api/admin/post/{{ .Post.ID }}/attach" hx-encoding="multipart/form-data" hx-target="#attach-result"
+        hx-swap="innerHTML" class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
         <div class="mb-4">
             <label class="block text-gray-700 text-sm font-bold mb-2" for="file">
                 Select File
