--- a/templates/update_post.html
+++ b/templates/update_post.html
@@ -4,6 +4,11 @@
 <body class="bg-gray-100">
     <div class="container mx-auto mt-8 p-4">
         {{ template "edit_post" . }}
+
+        <details class="mt-8 bg-white shadow-md rounded px-8 pt-6 pb-8">
+            <summary class="font-bold text-lg cursor-pointer mb-4">Upload Attachment</summary>
+            {{ template "attach_uploader" . }}
+        </details>
     </div>
 </body>
 
