--- a/templates/components/admin/manage_pages.html
+++ b/templates/components/admin/manage_pages.html
@@ -1,4 +1,4 @@
-{{ define "manage_pages_list" }}
+{{ define "manage_pages" }}
 
 <div class="mt-8 bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
     <h2 class="text-xl font-bold mb-4 border-b pb-2">Existing Pages</h2>
