feat: md parser

--- a/templates/views/post.html
+++ b/templates/views/post.html
@@ -33,7 +33,7 @@
                         </div>
                     </div>
 
-                    <div class="p-4 whitespace-pre-wrap">{{ .Content }}</div>
+                    <div class="prose prose-slate mx-auto p-5">{{ .ParseContent }}</div>
                 </div>
                 {{ end }}
             </div>
