--- a/templates/style.css
+++ b/templates/style.css
@@ -1,4 +1,6 @@
 @import "tailwindcss";
+@plugin "@tailwindcss/typography";
+@source ".";
 
 @theme {
     --shadow-standard: 0 14px 14px 0 rgba(0, 0, 0, 0.25);
