--- a/templates/views_admin/admin.html
+++ b/templates/views_admin/admin.html
@@ -21,6 +21,13 @@
                 <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">Manage Pages</h5>
                 <p class="font-normal text-gray-700">Static page management.</p>
             </a>
+
+            <!-- Manage Categories -->
+            <a href="/admin/categories"
+                class="block p-6 bg-white rounded-lg border border-gray-200 shadow-md hover:bg-gray-100 transition-colors">
+                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">Manage Categories</h5>
+                <p class="font-normal text-gray-700">Category management.</p>
+            </a>
         </div>
     </div>
 </body>
